# python-project-49

./: .gitignore  README.md  makefile  pyproject.toml
brain_games/: games_engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  even.py
