[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Roman Ko <roman_ko@gmail.com>"]
readme = "README.md"
packages = [{ include = "brain_games" },]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
my_package_cli = 'my_package.console:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
